Thu Apr 11 20:11:00 1996  Theodore Y. Ts'o  <tytso@dcl>

	* g_acquire_cred.c (gss_add_cred): Fixed code to correctly handle
		errors reported from the mechanism layer.

Wed Mar 27 00:05:37 1996  Theodore Y. Ts'o  <tytso@dcl>

	* mglueP.h: Don't include <sys/types.h> mechglue.h will take care
		of this by including gssapi.h, which will include
		sys/types.h if necessary.

Thu Mar 21 00:12:07 1996  Theodore Y. Ts'o  <tytso@dcl>

	* g_imp_sec_context.c (gss_import_sec_context):
	* g_exp_sec_context.c (gss_export_sec_context): Fix 16bit vs 32bit
		lint flame.

Wed Mar 20 20:20:38 1996  Theodore Y. Ts'o  <tytso@dcl>

	* g_glue.c: 
	* g_initialize.c: Add include of string.h, as it is needed.

	* g_acquire_cred.c: 
	* g_inq_cred.c: Add include of time.h

	* g_rel_oid_set.c (gss_release_oid_set): Removed unused variable.

	* mechglue.h: Don't include <sys/types.h>; it's included if
		necessary in gssapi/gssapi.h.  On a Macintosh, #include
		gssapi.h instead of gssapi/gssapi.h.

	* g_accept_sec_context.c, g_acquire_cred.c, g_compare_name.c,
	g_context_time.c, g_delete_sec_context.c, g_dsp_name.c,
	g_dsp_status.c, g_exp_sec_context.c, g_glue.c, g_imp_name.c,
	g_imp_sec_context.c, g_indicate_mechs.c, g_init_sec_context.c,
	g_initialize.c, g_inq_context.c, g_inq_cred.c, g_inq_names.c,
	g_process_context.c, g_rel_buffer.c, g_rel_cred.c, g_rel_name.c,
	g_rel_oid_set.c, g_seal.c, g_sign.c, g_unseal.c, g_verify.c,
	gssd_pname_to_uid.c, mechglue.h, mglueP.h: Comment out #ident
		line.  This causes the Macintosh C compiler indigestion.

Tue Mar 12 23:28:57 1996  Ken Raeburn  <raeburn@cygnus.com>

	* mechglue.h (gssd_pname_to_uid, gss_initialize): Use PROTOTYPE
	macro in declarations.

Sun Mar  3 12:49:25 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* g_imp_sec_context.c, g_exp_sec_context.c: Include string.h

Thu Feb 29 11:32:16 1996  Theodore Y. Ts'o  <tytso@dcl>

	* g_glue.c (__gss_get_mech_type): Fix code to properly parse token